objects/ScheduleReports__Contact_Report__c.object
<CustomObject>
    <fields>
        <fullName>ScheduleReports__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Report</relationshipLabel>
        <relationshipName>Contact_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScheduleReports__Email_ID__c</fullName>
        <formula>IF( ScheduleReports__Contact__c != null,  ScheduleReports__Contact__r.Email ,  IF( ScheduleReports__User__c != null,  ScheduleReports__User__r.Email ,  ScheduleReports__External_Recipient_Email__c )  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleReports__External_Recipient_Email__c</fullName>
        <label>External Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ScheduleReports__External_Recipient_Name__c</fullName>
        <label>External Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleReports__Job_ID__c</fullName>
        <formula>ScheduleReports__Report_Scheduler_Setup__r.ScheduleReports__Scheduler_Job_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleReports__Job_Name__c</fullName>
        <formula>ScheduleReports__Report_Scheduler_Setup__r.ScheduleReports__Scheduler_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleReports__Recipient_Name__c</fullName>
        <formula>IF( ScheduleReports__Contact__c != null, (ScheduleReports__Contact__r.FirstName+&apos; &apos;+ScheduleReports__Contact__r.LastName), IF( ScheduleReports__User__c != null, (ScheduleReports__User__r.FirstName +&apos; &apos;+ScheduleReports__User__r.LastName), ScheduleReports__External_Recipient_Name__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleReports__Report_Name__c</fullName>
        <formula>IF(ScheduleReports__Report_Scheduler_Setup__r.ScheduleReports__Report_ID__c!=null, ScheduleReports__Report_Scheduler_Setup__r.ScheduleReports__Report_ID__c,  ScheduleReports__Report_Scheduler_Setup__r.ScheduleReports__Report_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleReports__Report_Scheduler_Setup__c</fullName>
        <label>Report Scheduler Setup</label>
        <referenceTo>ScheduleReports__Report_Scheduler_Setup__c</referenceTo>
        <relationshipLabel>Contact Report</relationshipLabel>
        <relationshipName>Contact_Report</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ScheduleReports__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contact Report</label>
    <listViews>
        <fullName>ScheduleReports__All</fullName>
        <columns>ScheduleReports__Job_Name__c</columns>
        <columns>ScheduleReports__Report_Name__c</columns>
        <columns>ScheduleReports__User__c</columns>
        <columns>ScheduleReports__Contact__c</columns>
        <columns>ScheduleReports__External_Recipient_Name__c</columns>
        <columns>ScheduleReports__Email_ID__c</columns>
        <columns>ScheduleReports__Job_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Contact Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Report</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>